DesktopEN02b: Fix progress bar background and spacing
- background should be dark in the dark mode
- add paragraph for second banner page
- make softclose ready for darkmode

--- a/src/themes/Treedip/ProgressBar/ProgressBarAlternative.scss
+++ b/src/themes/Treedip/ProgressBar/ProgressBarAlternative.scss
@@ -66,7 +66,7 @@ $progress-bar-margin: 0 !default;
 			color: var( --progress-bar-fill-color );
 			text-align: right;
 			padding-right: 16px;
-			line-height: 24px;
+			line-height: 26px;
 		}
 
 		&--late-progress {
